style.css
/* ... */
.modal-search-form .search-field:-ms-input-placeholder { color: inherit; }
.modal-search-form .search-field::-moz-placeholder { color: inherit; }

.modal-search-form .search-submit {
	position: absolute;
		right: -9999rem;
		top: 50%;
	transform: translateY( -50% );
}

.modal-search-form .search-submit:focus {
	right: 0;
}


/* --------------------------------------------------------------------------------------------- */
/*	X. Sub Page
/* --------------------------------------------------------------------------------------------- */


/* --------------------------------------------------------------------------------------------- */
/*	X. Template: Cover Template
/* --------------------------------------------------------------------------------------------- */


.cover-header {
	background-color: currentColor;
	display: flex;
	overflow: hidden;
}

.cover-header-inner-wrapper {
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	width: 100%;
}

.cover-header-inner {
	padding: 10rem 0 4rem 0;
	width: 100%;
}

.cover-color-overlay,
.cover-color-overlay:before {
	position: absolute;
		bottom: 0;
		left: 0;
		right: 0;
		top: 0;
}

.cover-color-overlay:before {
	background: currentColor;
	content: "";
	display: block;
	mix-blend-mode: multiply;
	opacity: 1;
}

.cover-color-overlay.opacity-0:before { 		opacity: 0.0; }
.cover-color-overlay.opacity-10:before { 	opacity: 0.1; }
.cover-color-overlay.opacity-20:before { 	opacity: 0.2; }
.cover-color-overlay.opacity-30:before { 	opacity: 0.3; }
.cover-color-overlay.opacity-40:before { 	opacity: 0.4; }
.cover-color-overlay.opacity-50:before { 	opacity: 0.5; }
.cover-color-overlay.opacity-60:before { 	opacity: 0.6; }
.cover-color-overlay.opacity-70:before { 	opacity: 0.7; }
.cover-color-overlay.opacity-80:before { 	opacity: 0.8; }
.cover-color-overlay.opacity-90:before { 	opacity: 0.9; }
.cover-color-overlay.opacity-100:before { 	opacity: 1.0; }

.cover-header .entry-header {
	color: #fff;
	position: relative;
	width: 100%;
	z-index: 1;
}

.cover-header .entry-header a {
	color: inherit;
}

/* To The Content ---------------------------- */

.to-the-content-wrapper {
	margin-top: 2.5rem;
}

.to-the-content {
	align-items: center;
	display: flex;
	text-decoration: none;
}

.to-the-content .icon {
	align-items: center;
	border-radius: 50%;
	display: flex;
	justify-content: center;
	height: 3.2rem;
	transition: transform .1s linear;
	width: 3.2rem;
}

.to-the-content .icon svg {
	height: 1.6rem;
	width: 1.393rem;
}

.to-the-content .text {
	font-size: 1.5rem;
	font-weight: 500;
	margin-left: 1.5rem;
}

.to-the-content:hover .icon {
	transform: scale( 1.1 );
}

.to-the-content:hover .text {
	text-decoration: underline;
}


/* --------------------------------------------------------------------------------------------- */
/*	X. Template: Only Content
/* --------------------------------------------------------------------------------------------- */


.template-only-content #site-header {
	margin-bottom: 0;
}

.template-only-content .post-inner {
	padding: 0;
}


/* --------------------------------------------------------------------------------------------- */
/*	X. Post: Archive
/* --------------------------------------------------------------------------------------------- */


/* Archive Header ---------------------------- */

.archive-title {
	margin: 0;
}

.archive-header {
	margin-bottom: 5rem;
}


/* Preview Post ------------------------------ */

.preview-media + .preview-header {
	margin-top: 1.5rem;
}

.preview-title {
	margin: 0;
}

.preview-title a {
	color: inherit;
	text-decoration: none;
}

.preview-title a:hover {
	text-decoration: underline;
}

.preview-header .post-meta-wrapper {
	margin-top: 1rem;
}


/* --------------------------------------------------------------------------------------------- */
/*	X. Post: Single
/* --------------------------------------------------------------------------------------------- */


/* Post Header ------------------------------- */

.entry-title {
	margin: 0;
}

.intro-text {
	margin: 2rem 0 0;
}

/* POST META */

.post-meta-wrapper {
	margin-top: 2rem;
}

.post-meta {
	display: flex;
	flex-wrap: wrap;
	font-size: 1.5rem;
	font-weight: 600;
	list-style: none;
	margin: -1rem 0 0 -2rem;
}

.post-meta li {
	flex-shrink: 0;
	margin: 1rem 0 0 2rem;
	max-width: calc( 100% - 2rem );
}

.post-meta a {
	color: inherit;
	text-decoration: none;
}

.post-meta a:hover {
	text-decoration: underline;
}

.post-meta .meta-wrapper {
	align-items: center;
	display: flex;
	flex-wrap: nowrap;
}

.post-meta .meta-icon {
	flex-shrink: 0;
	margin-right: 1rem;
}

.sticky .post-sticky {
	color: inherit;
}

.post-meta .post-author .meta-icon svg { 		width: 1.6rem; height: 1.8rem; }
.post-meta .post-categories .meta-icon svg { 	width: 1.8rem; height: 1.7rem; }
.post-meta .post-comment-link .meta-icon svg { 	width: 1.8rem; height: 1.8rem; }
.post-meta .post-date .meta-icon svg { 			width: 1.7rem; height: 1.8rem; }
.post-meta .post-edit .meta-icon svg { 			width: 1.8rem; height: 1.8rem; }
.post-meta .post-sticky .meta-icon svg { 		width: 1.5rem; height: 1.8rem; }
.post-meta .post-tags .meta-icon svg { 			width: 1.8rem; height: 1.8rem; }

.post-meta path,
.post-meta polygon,
.post-meta circle {
	fill: currentColor;
}


/* Featured Media ---------------------------- */

.featured-media {
	margin-top: 5rem;
	position: relative;
		left: calc( 50% - 50vw );
	width: 100vw;
}

.featured-media img {
	width: 100%;
}

.featured-media figcaption {
	margin: 1.5rem auto 0 auto;
	width: calc( 100% - 5rem );
}

.post-inner {
	padding-top: 5rem;
}


/* Post Footer ------------------------------- */

/* POST META BOTTOM */

.post-meta-wrapper.post-meta-single-bottom {
	margin-top: 3rem;
}


/* Single Pagination ------------------------- */

.pagination-single {
	border-style: solid;
	border-width: .1rem 0;
	display: flex;
	flex-direction: column;
	font-size: 1.8rem;
	margin-top: 5rem;
	padding: 3rem 0;
}
/* ... */

